--- a/Contact-form.html
+++ b/Contact-form.html
@@ -4,36 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>halaman-contact</title>
-    <link rel="icon" href="assets/images/img/rifki.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Halaman Contact</title>
+    <link rel="stylesheet" href="Style/Style.css" />
+    <link rel="icon" href="Assets/Images/logo2.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/81634d0f93.js"
       crossorigin="anonymous"
     ></script>
   </head>
-
   <body>
     <nav>
       <div id="left-nav">
         <ul>
           <li>
             <a class="nav-option" href="https://dumbways.id/" target="_blank">
-              <img src="assets/images/img/icon.png" alt="DumbWays ID logo" />
+              <img src="Assets/Images/logo2.png" alt="DumbWays ID logo" />
             </a>
           </li>
 
-          <li>
-            <a
-              class="nav-option"
-              href="home-card.html"
-              style="font-weight: normal"
-              >HOME</a
-            >
+          <li class="nav-option-li">
+            <a class="nav-option" href="Index.html">HOME</a>
           </li>
 
-          <li>
-            <a class="nav-option" href="card.html" style="font-weight: normal"
+          <li class="nav-option-li">
+            <a
+              class="nav-option"
+              href="Personal-Project.html"
+              style="font-weight: normal"
               >MY PROJECT</a
             >
           </li>
@@ -41,23 +38,41 @@
       </div>
 
       <div id="right-nav">
+        <!-- <i class="fa-solid fa-moon fa-2xl fa-fw" id="theme-switch"></i> -->
+
         <a href="#">
-          <button type="button">Contact Me</button>
+          <button type="button">Contact</button>
         </a>
       </div>
+
+      <button id="nav-toggle" onclick="toggleOverlay()">
+        <i class="fa-solid fa-bars-staggered fa-2xl"></i>
+      </button>
     </nav>
 
-    <!-- ------------------------------------------------------------------------------------------------- -->
+    <div id="toggle-overlay">
+      <a href="Index.html" class="nav-option"> HOME </a>
+      <a
+        href="Personal-Project.html"
+        class="nav-option"
+        style="font-weight: normal"
+      >
+        MY PROJECT
+      </a>
+      <a href="Contact-Form.html">
+        <button type="button">Contact</button>
+      </a>
+    </div>
 
-    <h2 class="page-title">GET IN TOUCH</h2>
+    <h2 class="page-title">Contact Me</h2>
 
     <form>
       <div>
-        <label class="input-form" for="input-name">Name</label>
+        <label class="mandatory-field" for="name-input">Name</label>
         <input
           type="text"
-          placeholder="rifki m ramdan"
-          id="input-name"
+          placeholder="Your Name"
+          id="name-input"
           autocomplete="off"
           autocapitalize="words"
           required
@@ -65,53 +80,57 @@
       </div>
 
       <div>
-        <label class="" for="imput-name">Email</label>
+        <label class="mandatory-field" for="email-input">Email</label>
         <input
           type="email"
-          placeholder="rifkimr@gmail.com"
-          id="input-email"
+          placeholder="Rifki@gmail.com"
+          id="email-input"
           autocomplete="off"
           required
         />
       </div>
 
       <div>
-        <label class="" for="input-phone">Phone</label>
+        <label class="mandatory-field" for="phone-input">Phone</label>
         <input
           type="number"
-          placeholder="+62"
-          id="input-phone"
+          placeholder="+62xxxxxxxxxx"
+          id="phone-input"
           autocomplete="off"
           required
         />
       </div>
 
       <div>
-        <label class="" for="input-subject">Subject</label>
-        <select id="input-subject" required>
-          <option value="" hidden>Select</option>
-          <option value="Suggestion">Ui ux</option>
-          <option value="Collaboration request">Frontend</option>
-          <option value="Meeting request">Backend</option>
-          <option value="Something else">Fullstack</option>
-        </select>
+        <label class="mandatory-field" for="subject-input">Subject</label>
+        <div id="select-wrap">
+          <select id="subject-input" required>
+            <option value="" hidden>Select</option>
+            <option value="Suggestion">Ui Ux</option>
+            <option value="Collaboration request">Data Analist</option>
+            <option value="Meeting request">Teknik Inpormatika</option>
+            <option value="Something else">Industri</option>
+          </select>
+          <span id="drop-down"><i class="fa-solid fa-caret-down"></i></span>
+        </div>
       </div>
 
       <div>
-        <label for="input-message">Your Message</label>
+        <label for="message-input">Message</label>
         <textarea
-          placeholder="Apa yang sedang kamu pikirkan..!"
-          id="input-message"
+          placeholder="Your Message...."
+          id="message-input"
           autocomplete="off"
           autocapitalize="sentences"
         ></textarea>
       </div>
 
-      <button class="submit-button" type="button" onclick="submitData()">
-        Submit
+      <button class="submit-button" type="submit" onclick="sendMessage()">
+        Kirim
       </button>
     </form>
 
-    <script src="js/contact.js"></script>
+    <script src="Js/Contact-form.js"></script>
+    <script src="/Js/Mobile-Nav-Tonggle.js"></script>
   </body>
 </html>
