--- a/Personal-Project.html
+++ b/Personal-Project.html
@@ -37,7 +37,7 @@
       <div id="right-nav">
         <!-- <i class="fa-solid fa-moon fa-2xl fa-fw" id="theme-switch"></i> -->
 
-        <a href="Contact-Form.html">
+        <a href="Contact-form.html">
           <button type="button">Contact</button>
         </a>
       </div>
@@ -56,7 +56,7 @@
       >
         MY PROJECT
       </a>
-      <a href="Contact-Form.html">
+      <a href="Contact-form.html">
         <button type="button">Contact</button>
       </a>
     </div>
