--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       >
         MY PROJECT
       </a>
-      <a href="Contact-Form.html">
+      <a href="Contact-form.html">
         <button type="button">Contact</button>
       </a>
     </div>
